--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
 }
 	</style>
   <body>
- 
-<input id="hiddenInput" type="number" class='hideOpacity' value="0"/>
+<div id="switch"><button id="keyboard-button"></button>
 <div class="form-group required keyboard">
 				<label for="inboundNumber" class="control-label">
 						Inbound Number
