--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	
 	<script data-require="jquery" data-semver="3.1.1" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<script src="script.js"></script>
+	<link href="style.css rel="stylesheet"/>
 </head>
 <body>
 	<div id="switch"><button id="keyboard-button"></button></div>
