--- a/index.html
+++ b/index.html
@@ -1,35 +1,96 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta charset="utf-8" />
-	<title></title>
+
+  <head>
+    <meta charset="utf-8" />
+    <title></title>
+    <!--<link rel="stylesheet" href="style.css" /> -->
+    <script data-require="jquery" data-semver="3.1.1" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+	   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+ 
+ 
+    <script src="script.js"></script>
+	<!-- <script src="https://code.jquery.com/jquery-3.2.1.min.js"
+  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script> -->
+  </head>
+<style>
+.hideOpacity {
+	opacity: 0;
+    	z-index: -1;
+}
 	
-	<script data-require="jquery" data-semver="3.1.1" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-	<script src="script.js"></script>
-	<link href="style.css rel="stylesheet"/>
-</head>
-<body>
-	<div id="switch"><button id="keyboard-button"></button></div>
-	<div class="form-group required keyboard">
-		<label for="inboundNumber" class="control-label">
-			Inbound Number
-		</label>
-		<input
-			class="form-control"
-			required="required"
-			id="inboundNumber" maxlength="15"
-			type="text" onkeypress="return blockSpecialChars(event)"/>
-	</div>
-	<div class="form-group required keyboard">
-		<label for="trailerNumber" class="control-label">
-			Trailer Number
-		</label>
-		<input
-			style="text-transform: uppercase" maxlength="14"
-			class="form-control"
-			required="required"
-			id="trailerNumber"
-			type="text" autocomplete="false" onkeypress="return blockSpecialChars(event)"/>
-	</div>
-</body>
+	
+#switch{
+	background:black;
+	height:193px;
+	width:100vw;
+	position: fixed;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	font-family:"Roboto";
+	display:none;
+	align-items: stretch;
+	font-size:16px;
+	z-index:100 !important;
+}
+#switch button {
+	border:solid;
+	background:none;
+	height:100%;
+	margin:0;
+	width:10%;
+	color:white;
+	font-size:22px;
+	border-radius:none;
+	outline:none;
+	padding-left: 40px;
+	padding-right: 40px;
+}
+#switch button:active{
+	background:rgba(0,0,0,0.2);
+}
+.showAll{
+	overflow:hidden;
+	text-overflow:ellipsis !important;
+	white-space : nowrap;
+	max-width:inherit;
+	padding-left:0 !important;
+	padding-right:0 !important;
+}
+	</style>
+  <body>
+ 
+<input id="hiddenInput" type="number" class='hideOpacity' value="0"/>
+<div id="switch"><button id="keyboard-button"></button></div>
+<div class="form-group required keyboard">
+	<label for="inboundNumber" class="control-label">
+	Inbound Number
+	</label>
+	<input 
+	class="form-control changeKeyInput"
+	required="required"
+	id="inboundNumber" maxlength="15" 
+	type="text">
+	<!--<button id="inboundNumber-btn" type="button" class="btn btn-primary changeKeyType"> abc </button>  -->
+
+ </div> 
+ <div class="form-group required keyboard">
+              <label for="trailerNumber" class="control-label">
+                Trailer Number
+              </label>
+              <input 
+                  style="text-transform: uppercase" maxlength="14"
+                  class="form-control changeKeyInput"
+                  required="required"
+                  id="trailerNumber"
+                  type="text" onkeypress="return blockSpecialChars(event)">
+                  
+<!-- <button id="trailerNumber-btn" type="button" class="btn btn-primary changeKeyType"> abc </button> -->
+            
+ </div>
+ 
+
+  </body>
 </html>
